@@ -14,7 +14,6 @@ import com.fasterxml.jackson.databind.ser.PropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 import com.fasterxml.jackson.databind.ser.std.ToStringSerializer;
 import com.fasterxml.jackson.datatype.jsr310.deser.DurationDeserializer;
-import com.fasterxml.jackson.module.afterburner.AfterburnerModule;
 import io.netty.buffer.ByteBuf;
 import io.netty.buffer.ByteBufInputStream;
 import io.netty.handler.codec.CorruptedFrameException;
@@ -25,6 +24,7 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.time.Duration;
+import java.time.Instant;
 import java.util.concurrent.ConcurrentHashMap;
 
 import static com.azure.cosmos.implementation.guava25.base.Preconditions.checkNotNull;
@@ -38,9 +38,9 @@ public final class RntbdObjectMapper {
     private static final ObjectMapper objectMapper = new ObjectMapper()
         .registerModule(new SimpleModule()
             .addSerializer(Duration.class, ToStringSerializer.instance)
-            .addDeserializer(Duration.class, DurationDeserializer.INSTANCE))
-        .setFilterProvider(filterProvider)
-        .registerModule(new AfterburnerModule());
+            .addDeserializer(Duration.class, DurationDeserializer.INSTANCE)
+            .addSerializer(Instant.class, ToStringSerializer.instance))
+        .setFilterProvider(filterProvider);
 
     private static final ObjectWriter objectWriter = objectMapper.writer();
 
@@ -120,7 +120,7 @@ public final class RntbdObjectMapper {
         checkNotNull(filter, "filter");
 
         try {
-            filterProvider.addFilter(type.getSimpleName(), filter.newInstance());
+            filterProvider.addFilter(type.getSimpleName(), filter.getDeclaredConstructor().newInstance());
         } catch (final ReflectiveOperationException error) {
             throw new IllegalStateException(error);
         }
